--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.1.0",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "graphql": "^14.0.2",
     "sequelize": "^4.37.10",
