--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,11 @@
 {
   "name": "upinionassignment",
   "version": "1.0.0",
-  "description": "Upinion backend + frontend assignment",
+  "description": "Upinion backend assignment",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "babel-node": "babel-node index.js",
+    "start": "nodemon --exec npm run babel-node"
   },
   "author": "Upinion",
   "license": "ISC",
@@ -17,6 +18,10 @@
     "sqlite3": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/node": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
     "nodemon": "^1.18.5"
   }
 }
